--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 }
+table{
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(220, 177, 120);
+    color:black;
+    border: 1px solid black;
+}
+TableHead{
+    gap:3rem;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.table__heading tr th{
+    padding:2rem;
+}
+.employee__data td{
+    padding:1rem;
+    margin-left: 1rem;
+}
+.employee__data td button{
+    background-color:rgb(220, 114, 127);
+    padding:5px;
+    border:1px;
 }
